--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -292,6 +292,8 @@
   </div>
 </div>
 
+{{user.portuguese_default}}
+
 {{ user_activity_dates|json_script:"activity-data" }}
 {{ combined_city_data|json_script:"weather-data" }}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
