--- a/templates/mainsite/architecture.html
+++ b/templates/mainsite/architecture.html
@@ -260,7 +260,7 @@
               
               <!-- Heading, text, and picture on the right -->
               <div class="col-md-12">
-                  <div class="card-header" style="border-top-right-radius: 10px;">2. Feast Day of St. Anthony</div>
+                  <div class="card-header" style="border-top-right-radius: 10px;border-top-left-radius: 10px;">2. Feast Day of St. Anthony</div>
                   <div class="row">
                       <div class="col-md-12">
                           <div class="card-body">
@@ -286,7 +286,7 @@
               
               <!-- Heading, text, and picture on the right -->
               <div class="col-md-12">
-                  <div class="card-header" style="border-top-right-radius: 10px;">3. São João</div>
+                  <div class="card-header" style="border-top-right-radius: 10px;border-top-left-radius: 10px;">3. São João</div>
                   <div class="row">
                       <div class="col-md-12">
                           <div class="card-body">
@@ -310,30 +310,76 @@
       </div>
       <div class="card">
           <div class="row g-0">
-              <!-- Map on the left -->
-              <div class="col-md-3">
-                  <div class="map" id="festivalMap4" style="height: 300px;"></div> <!-- Map container -->
-              </div>
               
               <!-- Heading, text, and picture on the right -->
-              <div class="col-md-9">
-                  <div class="card-header" style="border-top-right-radius: 10px;">Madeira's Flower Festival</div>
+              <div class="col-md-12">
+                  <div class="card-header" style="border-top-right-radius: 10px;border-top-left-radius: 10px;">4. Carnival</div>
                   <div class="row">
-                      <div class="col-md-8">
+                      <div class="col-md-12">
                           <div class="card-body">
-                              <p class="card-text">The festival marks the arrival of spring with a spectacular parade of floats adorned with countless varieties of flowers. This colorful celebration fills Funchal with melodious music and vibrant decorations, drawing visitors from around the globe.</p>
-                              <p class="card-text"><strong>Dates:</strong> April 23 - May 30</p>
+                              <p class="card-text">
+                                The Carinval in Portugal, known locally as 'Carnaval', is a pre-Lenten festival celebrated with great enthusiasm and a variety of rich traditions.
+                                It takes place right before Ash Wednesday and features a blend of religious, pagan and modern elements.</p>
+                                <p>The Carnaval is widely known for its elaborate
+                                parades featuring colorful floats, vibrant costumes and the lively samba bands. The participants in these parades often dress in an extravagant manner,
+                                reflecting both traditional themes and social or political commentary.
+                              </p>
+                              <p class="card-text"><strong>Location:</strong> The festivities take place all over Portugal, but the most famous celebrations can be found in 
+                              the regions of Torres Vedras, Ovar, Loulé and Madeira.</p>
+                              <p class="card-text"><strong>Dates:</strong> The days leading up to Ash Wednesday (decided by the Christian Calendar)</p>
                           </div>
-                      </div>
-                      <div class="col-md-4 img-div">
-                          <img src="https://www.sportstourismnews.com/wp-content/uploads/2022/03/portugal-walking-trekking-930x600.jpg" 
-                          alt="Madeira's Flower Festival" class="img-fluid"
-                          > <!-- Placeholder image -->
                       </div>
                   </div>
               </div>
           </div>
       </div>
+      <div class="card">
+        <div class="row g-0">
+            
+            <!-- Heading, text, and picture on the right -->
+            <div class="col-md-12">
+                <div class="card-header" style="border-top-right-radius: 10px;border-top-left-radius: 10px;">5. Semana Santa</div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card-body">
+                            <p class="card-text">
+                              Semana Santa (Holy Week) is a deeply significant and solemn festival that commemorates the passion of Christ. It has been celebrated
+                            for centuries, and is deep rooted in the Roman Catholic tradition. In Portugal and many other Catholic countries across the globe, these 
+                          celebrations are a spiritual experience that involves processions, rituals and ceremonies.</p>
+                              <p>The celebration of Holy Week includes 4 parts, namely, Palm Sunday, Holy Thursday, Good Friday and Easter Sunday.
+                            </p>
+                            <p class="card-text"><strong>Location:</strong> All across Portugal.</p>
+                            <p class="card-text"><strong>Dates:</strong> It spans the last week of Lent. Starting on Palm Sunday and ending on Easter Sunday.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+      <div class="row g-0">
+          
+          <!-- Heading, text, and picture on the right -->
+          <div class="col-md-12">
+              <div class="card-header" style="border-top-right-radius: 10px;border-top-left-radius: 10px;">6. Festas das Cruzes</div>
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="card-body">
+                          <p class="card-text">
+                            Festas Das Cruzes (Festival of Crosses) is a traditional Portuguese festival that has deep religious roots and commemorates the
+                          discovery of a crucifix by the local people, which is believed to have miraculous origins. It is not only a religious event but also
+                        a time of joyful celebration, reflecting the community's culture and heritage/p>
+                            <p>This festival is a vivid example of how Portugal preserves and celebrates its rich history and religious heritage through annual
+                              community events by blending devotion with cultural festivity.
+                          </p>
+                          <p class="card-text"><strong>Location:</strong> Primarily celebrated in Barcelos, located in Northern Portugal.</p>
+                          <p class="card-text"><strong>Dates:</strong> The beginning of Spring.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 
 
       
