--- a/templates/mainsite/quiz_2.html
+++ b/templates/mainsite/quiz_2.html
@@ -127,9 +127,11 @@
               </div>
           </div> -->
       </div>
-        <div class="text-center" style="padding-top:10px">
+      <div class="text-center" style="padding-top:10px">
         <button id="submitButton" type="submit" class="btn btn-success btn-lg">Continue</button>
-        </div>
+        <!-- Additional button next to Continue -->
+        <!-- <button id="skipButton" type="button" class="btn btn-danger btn-lg">Skip</button> -->
+    </div>
       </form>
     </section>
     </div>
