--- a/templates/mainsite/vocab.html
+++ b/templates/mainsite/vocab.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"> <!-- Correct FontAwesome link -->
@@ -71,13 +71,13 @@
             box-shadow: inset 0px 0px 10px 0px black;
         }
 
-        #plusBtnGeneral {
+        #plusBtnGeneral, #plusBtnOverall {
             background-color: rgb(67, 187, 56);
             border: 2px solid black;
             color: white;
         }
 
-        #plusBtnGeneral:hover {
+        #plusBtnGeneral:hover, #plusBtnOverall:hover {
             background-color: rgb(45, 102, 40);
             box-shadow: inset 0 0 4px 0px black;
         }
@@ -314,6 +314,7 @@
                                             <th scope="col">English</th>
                                             <th scope="col">English Usage</th>
                                             <th scope="col">Portuguese Usage</th>
+                                            <th scope="col"><center>Actions</center></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -352,6 +353,9 @@
                                                     </span>
                                                 </td>
                                             {% endwith %}
+                                            <td>
+                                                <center><button class="btn btn-outline-success plus-button plusBtnOverall" id="plusBtnOverall" data-id="{{word.id}}"><i class="fas fa-plus"></i>    Add to List</button></center>
+                                            </td>                                        
                                         </tr>
                                         {% endfor %}
                                     </tbody>
@@ -411,7 +415,7 @@
     
   </div>
 
-  <div aria-live="polite" aria-atomic="true" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); min-height: 200px; z-index: 1050;">
+  <!-- <div aria-live="polite" aria-atomic="true" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); min-height: 200px; z-index: 1050;">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="1000">
       <div class="toast-header">
         <strong class="mr-auto text-success">Notification</strong>
@@ -423,7 +427,7 @@
         Word deleted successfully.
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Bootstrap Modal -->
 <!-- <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
@@ -462,6 +466,21 @@
     </div>
 </div>
 
+<div aria-live="polite" aria-atomic="true" style="position: fixed; top: 0; right: 0; min-height: 200px; z-index: 1050; padding: 20px;">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="1000">
+      <div class="toast-header">
+        <strong class="mr-auto text-primary">Notification</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true" id="closeToast">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        Word added to the list!
+      </div>
+    </div>
+</div>
+
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
@@ -472,6 +491,11 @@ $(document).ready(function() {
     $('#delete-all-button').click(function() {
         // Show the modal
         $('#deleteConfirmationModal').modal('show');
+    });
+    
+    $('#user-saved-tab').click(function(e) {
+        e.preventDefault(); // Prevent the default tab switch
+        window.location.reload(); // Reload the page
     });
 
     // Bind click event to the modal's confirm button
@@ -497,6 +521,64 @@ $(document).ready(function() {
             }
         });
     });
+
+    // $('.plusBtnOverall').click(function() {
+    //     event.preventDefault()
+    //     var wordId = $(this).data('id');  // Get the word ID stored in the data-id attribute
+    //     console.log(wordId);
+    //     $.ajax({
+    //         url: '/save_word/',  // URL to your Django view
+    //         type: 'POST',
+    //         data: {
+    //             'word_id': wordId,  // Data you want to send to the server
+    //             'csrfmiddlewaretoken': '{{ csrf_token }}',  // CSRF token for Django
+    //             'word_type': 'overall'
+    //         },
+    //         success: function(response) {
+    //             // Handle success
+    //             console.log('Added to list successfully:', response);
+    //         },
+    //         error: function(xhr, status, error) {
+    //             // Handle error
+    //             console.error('Failed to add to list:', error);
+    //         }
+    //     });
+    // });
+    $('body').on('click', '.plusBtnOverall', function(event) {
+        event.preventDefault();
+        var wordId = $(this).data('id');
+        console.log('Word ID:', wordId);
+        
+        $.ajax({
+            url: '/save_word/',  // URL to your Django view
+            type: 'POST',
+            data: {
+                'word_id': wordId,  // Data you want to send to the server
+                'csrfmiddlewaretoken': '{{ csrf_token }}',  // CSRF token for Django
+                'word_type': 'overall'
+            },
+            success: function(response) {
+                // Handle success
+                $('.toast-body').html(response.message);
+                $('.toast').toast('show');  // Shows the toast
+                setTimeout(function() {
+                    $('.toast').toast('hide'); // This will hide the toast
+                }, 2000);
+                console.log('Added to list successfully:', response);
+            },
+            error: function(xhr, status, error) {
+                var responseJson = JSON.parse(xhr.responseText);
+                var message = responseJson.message;
+                $('.toast-body').html(message);
+                $('.toast').toast('show');  // Shows the toast
+                setTimeout(function() {
+                    $('.toast').toast('hide'); // This will hide the toast
+                }, 2000)
+                console.error('Failed to add to list:', message);
+            }
+        });
+    });
+
 });
 
 document.getElementById('download-button').addEventListener('click', function() {
@@ -543,10 +625,6 @@ document.getElementById('download-button').addEventListener('click', function() 
         document.body.appendChild(a);
         a.click();
         window.URL.revokeObjectURL(url);
-        // $('#downloadModal').modal('show'); // or you could use showModalDialog()
-        // setTimeout(function() {
-        //     $('#downloadModal').modal('hide'); // Hide the modal after 2000 milliseconds (2 seconds)
-        // }, 2000);
     },
     error: function(xhr, status, error) {
         console.error('There was an error in downloading the table: ', error);
@@ -574,6 +652,7 @@ $(document).ready(function() {
                 var row = $('#savedWordRow_' + savedWordId);
                 row.fadeOut('slow', function() { 
                     $(this).remove();
+                    window.location.reload();
                     // After removal, update the indexes of all subsequent rows.
                     $('.saved-words-table tbody tr').each(function(index) {
                         $(this).find('th:first').text(index + 1); // Assuming the first th in each row contains the index number.
@@ -625,6 +704,7 @@ $(document).ready(function() {
                                         <td>-</td>
                                         <td>-</td>
                                         <td>-</td>
+                                        <td><center>-</center></td>
                                     </tr>`;
                     $('.saved-words-table tbody').append(emptyRow);
                 } else {
@@ -653,6 +733,9 @@ $(document).ready(function() {
                                                   ${word.example_usage ? word.example_usage.portuguese_usage : '-'}
                                                   ${word.example_usage ? `<button class="sound-button" id="speakBtn" onclick="convertTextToSpeech('${word.example_usage.portuguese_usage}')">🔊</button>` : ''}
                                               </span>
+                                          </td>
+                                          <td>
+                                            <center><button class="btn btn-outline-success plus-button plusBtnOverall" id="plusBtnOverall" data-id='${word.id}'><i class="fas fa-plus"></i>    Add to List</button></center>
                                           </td>
                                       </tr>`;
                         $('.saved-words-table tbody').append(newRow);
@@ -712,6 +795,7 @@ $(document).ready(function() {
             'word_type': 'general'
         },
         success: function(response) {
+            $('.toast').toast('show');
             console.log('Added to list successfully:', response);
             // Optionally update the UI to reflect the addition
         },
