--- a/templates/mainsite/festivals.html
+++ b/templates/mainsite/festivals.html
@@ -39,9 +39,9 @@
                 Culture
               </a>
               <div class="dropdown-menu" aria-labelledby="cultureDropdown">
-                <a class="dropdown-item" href="/architecture">Architecture</a>
-                <a class="dropdown-item" href="/festivals">Festivals</a>
-                <a class="dropdown-item" href="page3.html">Media</a>
+                <a class="dropdown-item" href="/architecture" style="font-size: 20px;">Architecture</a>
+                <a class="dropdown-item" href="/festivals" style="font-size: 20px;">Festivals</a>
+                <a class="dropdown-item" href="page3.html" style="font-size: 20px;">Media</a>
                 <!-- More dropdown items -->
               </div>
           </li>
@@ -106,9 +106,8 @@
 </head>
 <body onload="initMaps()">
     <div class="container mt-4">
-        <h1 class="mb-4 header">Architecture</h1>
+        <h1 class="mb-4 header" style="text-shadow: 3px 3px #000000;">Architecture</h1>
         <div class="intro-text" style="margin-bottom: 40px;">
-            <h2 class="sub-heading">Architecture in Portugal</h2>
             <p>Portugal is renowned for its rich architecural heritage, spanning across several centuries and a variety of styles, from Romanesque to 
                 Manueline, and from Baroque to Modern. Information on the six most famous architectural sites in Portugal are displayed below.
             </p>
