--- a/templates/mainsite/settings.html
+++ b/templates/mainsite/settings.html
@@ -123,7 +123,7 @@ textarea {
             <!-- Daily Goal and Site Language -->
             <div class="form-row">
                 <div class="col-md-6 form-group">
-                    <label for="dailyGoal">Daily Goal (number of questions)</label>
+                    <label for="dailyGoal">Daily Activity Goal</label>
                     <input type="number" class="form-control" id="dailyGoal" value="10">
                 </div>
                 <div class="col-md-6 form-group">
